[gd_scene load_steps=9 format=3 uid="uid://bbv8vjmfgeck6"]

[ext_resource type="Script" path="res://scripts/ItemContainer.gd" id="1_l5lol"]
[ext_resource type="Texture2D" uid="uid://bvqkfdgimlge7" path="res://assets/gui/icons/potion_icon.png" id="2_xnke1"]
[ext_resource type="LabelSettings" uid="uid://dgi27rysml5px" path="res://assets/fonts/gray_console_text.tres" id="3_vk6u7"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="4_v38sh"]

[sub_resource type="LabelSettings" id="LabelSettings_18och"]
font = ExtResource("4_v38sh")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_wubjn"]
font = ExtResource("4_v38sh")
font_size = 27
font_color = Color(0.823529, 0.65098, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlk2r"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy6eo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="MarginContainer" type="MarginContainer"]
offset_right = 363.0
offset_bottom = 32.0
script = ExtResource("1_l5lol")

[node name="ItemContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="ItemContainer"]
layout_mode = 2
texture = ExtResource("2_xnke1")
stretch_mode = 2

[node name="ItemName" type="Label" parent="ItemContainer"]
clip_contents = true
custom_minimum_size = Vector2(235, 0)
layout_mode = 2
text = "nome"
label_settings = ExtResource("3_vk6u7")
vertical_alignment = 3
text_overrun_behavior = 3

[node name="x" type="Label" parent="ItemContainer"]
layout_mode = 2
text = "x"
label_settings = SubResource("LabelSettings_18och")

[node name="ItemQuantity" type="Label" parent="ItemContainer"]
custom_minimum_size = Vector2(50.495, 0)
layout_mode = 2
text = "100
"
label_settings = SubResource("LabelSettings_wubjn")
horizontal_alignment = 2
text_overrun_behavior = 1

[node name="virgula" type="Label" parent="ItemContainer"]
layout_mode = 2
text = ","
label_settings = SubResource("LabelSettings_18och")

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_vlk2r")
theme_override_styles/hover = SubResource("StyleBoxFlat_dy6eo")
theme_override_styles/normal = SubResource("StyleBoxFlat_vlk2r")
